# bullcrypt

./: README.md  pyproject.toml
.github/workflows/: test-package.yml
bullcrypt/: cli.py  main.py  types.py  utils.py
bullcrypt/algorithm/: __init__.py  fernet.py
src/bullcrypt/: __main__.py  cli.py  main.py  types.py  utils.py
src/bullcrypt/algorithm/: __init__.py  fernet.py
tests/: test_algorithm.py  test_fernet.py  test_main.py  test_utils.py
