[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bullcrypt"
version = "0.0.2"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=2.2",
]
authors = [
    {name = "Jayson Fong", email = "jayson.fong@gatech.edu"}
]
description = "Bulk decryption"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/Jayson-Fong/bullcrypt"
Issues = "https://github.com/Jayson-Fong/bullcrypt/issues"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
]

dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov"
]

[tool.hatch.build]
packages = ["src/bullcrypt"]
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "-v --cov=bullcrypt --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
mypy_path = ["src", "tests"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.coverage.run]
branch = true
source = ["bullcrypt", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[project.scripts]
bullcrypt = "bullcrypt.main:main"

[project.entry-points.'bullcrypt.algorithm']
fernet = "bullcrypt.algorithm.fernet:Fernet"
